k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kongkwun-bot-svc
  namespace: kongkwun-bot
spec:
  selector:
    app: kongkwun-bot
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
